nginx-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.19.10
    ports:
    - containerPort: 80
    volumeMounts:
      - name: efs-vol
        mountPath: /usr/share
  volumes:
    - name: efs-vol
      persistentVolumeClaim:
        claimName: efs-pvc
