simple.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-testing
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.19.10
    ports:
    - containerPort: 80
