nginx-lb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-lb
  labels:
    app: MyApp
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
