istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bar-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - '*'
