bitnami.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pro-ingress
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    alb.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
    rules:
      - host: a400bd08fc0c641ad84822e7b92e7a32-268356858.us-east-1.elb.amazonaws.com
        http:
          paths:
            - backend:
                service:
                  name: kube-stack-prometheus-kube-prometheus
                  port:
                    number: 9090
              path: /prom
              pathType: Prefix
