grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitnami-ingress
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
    rules:
      - host: a400bd08fc0c641ad84822e7b92e7a32-268356858.us-east-1.elb.amazonaws.com
        http:
          paths:
            - backend:
                service:
                  name: kube-stack-prometheus-grafana
                  port:
                    number: 80
              path: /login
              pathType: Prefix
